Fix overflow scroll on code blocks
Fixes https://github.com/kubernetes/kubernetes.github.io/issues/633

--- a/_sass/_base.sass
+++ b/_sass/_base.sass
@@ -856,6 +856,7 @@ dd
 		display: block
 		margin: 20px 0
 		padding: 15px
+		position: relative
 		overflow-x: auto
 
 	h1 code, h2 code, h3 code, h4 code, h5 code, h6 code
